# innovativeproject-noticrawl

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  LICENSE  README.md  build.sh  docker-compose.yml  run-noticrawl.sh
backend/: 12345.py  Dockerfile.backend  first_endpoint.py  pyproject.toml  wp.html
backend/Frontend_Backend/: noticrawl.py
backend/Frontend_Backend/build2/: asset-manifest.json  index.html  precache-manifest.a57334fa33f93873be22fcaf82b26669.js  service-worker.js
backend/Static_test/: static_test.py
backend/Static_test/templates/: item.html
backend/sql_app/: database.py  models.py
backend/src/: main.py  main_tutorial.py  noticrawl.py  parse_module.py  puppeteer_test.py  settings.py
backend/src/auth/: auth_controller.py  auth_service.py  bearer_cookie_auth.py  password_model.py
backend/src/crawling/: communicators.py  crawling_controller.py  crawling_service.py  parsing.py  scheduler.py  scheduler_api.py
backend/src/crawling/models/: crawl_data_model.py  link_model.py  notification_model.py  page_model.py  script_model.py  url_model.py
backend/src/crawling/schemas/: link_schemas.py  notification_schemas.py  script_schemas.py
backend/src/database/: connection.py  database_schemas.py  fake_db.py  models.py
backend/src/helpers/: crawling.py  database.py  debug.py  oauth2_scheme.py  status_code_model.py
backend/src/helpers/email_notifications/: email_crawling.html  email_crawling2.html
backend/src/helpers/validation/: validation.py
backend/src/notifications/: main_notifications.py  notifications.py
backend/src/scrapy_project/spiders/: quotes_spider.py  wp_spider.py
backend/src/user/: user_controller.py  user_model.py  user_schemas.py  user_service.py
database/: Noticrawl.sql  main.py  (+1 more)
(+93 files in other folders)
