[tool.poetry]
name = "noticrawl"
version = "0.1.0"
description = ""
authors = ["Adrian Płatos <adiplatos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"

[tool.taskipy.tasks]
dev-server = "cd src && uvicorn main:app --reload"
