[tool.poetry]
name = "noticrawl"
version = "0.1.0"
description = ""
authors = ["Adrian Płatos <adiplatos@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
aiofiles = "^0.4.0"
jinja2 = "^2.11.1"
SQLAlchemy = "^1.3.16"
psycopg2 = "^2.8.5"
dynaconf = "^2.2.3"
python-multipart = "^0.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pylint = "^2.5.0"
pyppeteer = "^0.0.25"
PyJWT = "^1.7.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
pylint = "^2.4.4"
black = "^19.10b0"

[tool.taskipy.tasks]
dev-server = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload --log-level debug "

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
